...
      offSet: CGSize(width: 0, height: 2),
      radius: 2
    )
  }
  
  func configureAccessibilityIdentifiers() {
    nameLabel.accessibilityIdentifier = "userCardNameLabel"
  }
}

// MARK: - Refresh

private extension UserCardView {
...
