...
      UserTableViewCell.self,
      forCellReuseIdentifier: UserTableViewCell.reuseIdentifier
    )
  }
  
  func configureAccessibilityIdentifiers() {
    tableView.accessibilityIdentifier = "usersTableView"
  }
}

// MARK: - Bindings

private extension UserListController {
...
